[tool.poetry]
name = "reconnaissance"
version = "0.1.0"
description = ""
authors = ["Rémy Frenoy <rfrenoy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
onnxruntime = "^1.14.1"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
